# edvo

./: CMakeLists.txt  LICENSE  README.md  package.xml
cfg/: EDVO.cfg
launch/: esm.launch  fc.launch  ic.launch
resources/: edvo.dyncfg
src/: DirectVisualOdometry.h  RGBDVONode.cpp  RGBDVONode.h  edvo.cpp
